--- a/client/src/mp/pages/MercadoPago/MercadoPago.module.css
+++ b/client/src/mp/pages/MercadoPago/MercadoPago.module.css
@@ -8,3 +8,8 @@
     gap: 12px;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
+
+.dateSelector{
+    position: absolute;
+    right: 0;
+}
