--- a/client/src/mp/components/ui/AppearContainer.module.css
+++ b/client/src/mp/components/ui/AppearContainer.module.css
@@ -6,6 +6,7 @@
     inset: 0;
     background-color: #fff;
     transition: top .5s;
+    z-index: 20;
   }
 
   .container--items > *:nth-child(odd) {
