--- a/client/src/mp/components/ui/AppearContainer.module.css
+++ b/client/src/mp/components/ui/AppearContainer.module.css
@@ -5,7 +5,7 @@
     height: 436px;
     inset: 0;
     background-color: #fff;
-    transition: top .5s;
+    transition: top .3s ease-out;
     z-index: 20;
   }
 
