--- a/client/src/mp/components/ui/BtnCeleste.module.css
+++ b/client/src/mp/components/ui/BtnCeleste.module.css
@@ -1,8 +1,8 @@
 .btn--celeste {
-    display: inline-block;
-    padding: 5px;
-    border-radius: 0.3em;
-    cursor: pointer;  
+    /* display: inline-block; */
+    /* padding: 5px; */
+    /* border-radius: 0.3em; */
+    /* cursor: pointer;   */
     border-color: #3498db;
     background-color: #81d4fa;
 }
